<resources>
    <string name="app_name">Mitwisser</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomUsuario">Correo</string>
    <string name="Entrar">Entrar</string>
    <string name="registrarse">registrarse</string>
    <string name="password">Contraseña</string>
    <string name="save">Guardar</string>
    <string name="password2">Repeat password</string>
    <string name="celular">Celular</string>
    <string name="email"> E-mail</string>
    <string name="prueba">Texto de Prueba</string>
    <string name="changeuserpic">Cambiar imagen de perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="userpic">La imagen de perfil va aquí</string>
    <string name="nickcame">Ingrese su nickname</string>
    <string name="changeImage">Cambiar imagen de perfil</string>
    <string name="confirmPass">Confirmar Contraseña</string>
    <string name="savet2l">Salvar tiempo de vida</string>
    <string name="_2_minutos">2 Minutos</string>
    <string name="_1_minuto">1 Minuto</string>
    <string-array name="time2live">
        <item>Escoja tiempo de vida (minutos)</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
</resources>